@@ -38,8 +38,8 @@ struct python_script : public boost::noncopyable {
 	boost::python::dict localDict;
 	python_script(unsigned int plugin_id, const std::string alias, const script_container& script);
 	~python_script();
-	void callFunction(const std::string& functionName);
-	void callFunction(const std::string& functionName, unsigned int i1, const std::string &s1, const std::string &s2);
+	bool callFunction(const std::string& functionName);
+	bool callFunction(const std::string& functionName, unsigned int i1, const std::string &s1, const std::string &s2);
 	void _exec(const std::string &scriptfile);
 };
 
