@@ -4,11 +4,11 @@ FILE (GLOB scripts_BAT "*.bat")
 FILE (GLOB scripts_VBS "*.vbs")
 FILE (GLOB scripts_PS1 "*.ps1")
 FILE (GLOB scripts_LIB "lib/*.vbs")
-IF(WIN32)
+#IF(WIN32)
 FILE (GLOB_RECURSE scripts_PYT "python/*.py")
-ELSE(WIN32)
-FILE (GLOB scripts_PYT "python/*.py" "python/lib/*.py")
-ENDIF(WIN32)
+#ELSE(WIN32)
+#FILE (GLOB scripts_PYT "python/*.py" "python/lib/*.py")
+#ENDIF(WIN32)
 FILE (GLOB scripts_LUA "lua/*.lua")
 
 SET(script_ALL ${scripts_BAT} ${scripts_VBS} ${scripts_PS1})
