@@ -2,17 +2,20 @@ from NSCP import Settings, Registry, Core, log, status, log_error, sleep
 from test_helper import BasicTest, TestResult, Callable, setup_singleton, install_testcases, init_testcases, shutdown_testcases
 
 from sys import path
-from os import getcwd
-path.append(getcwd() + '/scripts/python')
+import os
+path.append(os.getcwd() + '/scripts/python')
 
 from test_nsca import NSCAServerTest
 from test_nrpe import NRPEServerTest
 #from test_pb import NSCAServerTest
-from test_eventlog import EventLogTest
 from test_python import PythonTest
-from test_w32_system import Win32SystemTest
 
-all_tests = [NSCAServerTest, NRPEServerTest, EventLogTest, PythonTest, Win32SystemTest]
+# 
+all_tests = [NSCAServerTest, PythonTest, NRPEServerTest]
+if os.name == 'nt':
+	from test_eventlog import EventLogTest
+	from test_w32_system import Win32SystemTest
+	all_tests.extend([EventLogTest, Win32SystemTest])
 
 def __main__():
 	install_testcases(all_tests)
