@@ -1,4 +1,7 @@
 from NSCP import Settings, Registry, Core, log, status, log_error, sleep
+import sys
+log('==>%s'%sys.path)
+
 from test_helper import BasicTest, TestResult, Callable, setup_singleton, install_testcases, init_testcases, shutdown_testcases
 import plugin_pb2
 from types import *
