@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,123
-#define STRPRODUCTVER  "0,4,0,123"
-#define STRPRODUCTDATE "2012-01-16"
+#define PRODUCTVER     0,4,0,125
+#define STRPRODUCTVER  "0,4,0,125"
+#define STRPRODUCTDATE "2012-01-18"
 #endif // VERSION_HPP
