@@ -1,3 +1,3 @@
 version=0.4.0
-build=123
-date=2012-01-16
+build=125
+date=2012-01-18
